Bug 1619186 - Refactoring to avoid use FromUnknownRect. r=masayuki

No functional changes, just some cleanup.

Differential Revision: https://phabricator.services.mozilla.com/D86982